@@ -1,42 +1,67 @@
-import java.io.StringWriter
 import com.adarshr.gradle.testlogger.theme.ThemeType
 import com.github.benmanes.gradle.versions.reporter.PlainTextReporter
 import com.github.benmanes.gradle.versions.reporter.result.Result
 import com.github.benmanes.gradle.versions.updates.DependencyUpdatesTask
+import com.palantir.gradle.gitversion.VersionDetails
+import groovy.lang.Closure
+import org.jetbrains.intellij.tasks.RunPluginVerifierTask
+import java.io.StringWriter
+import java.util.EnumSet
 
 fun properties(key: String) = project.findProperty(key).toString()
 
 plugins {
     id("java")
     id("jacoco")
-    id("org.jetbrains.intellij") version "1.5.3" // https://github.com/JetBrains/gradle-intellij-plugin and https://lp.jetbrains.com/gradle-intellij-plugin/
+    id("org.jetbrains.intellij") version "1.9.0" // https://github.com/JetBrains/gradle-intellij-plugin https://lp.jetbrains.com/gradle-intellij-plugin/
     id("com.github.ben-manes.versions") version "0.42.0" // https://github.com/ben-manes/gradle-versions-plugin
     id("com.adarshr.test-logger") version "3.2.0" // https://github.com/radarsh/gradle-test-logger-plugin
+    id("com.jaredsburrows.license") version "0.9.0" // https://github.com/jaredsburrows/gradle-license-plugin
+    id("com.osacky.doctor") version "0.8.1" // https://github.com/runningcode/gradle-doctor/
+    id("com.palantir.git-version") version "0.15.0" // https://github.com/palantir/gradle-git-version
     id("biz.lermitage.oga") version "1.1.1"
 }
 
 // Import variables from gradle.properties file
 val pluginIdeaVersion: String by project
 val pluginDownloadIdeaSources: String by project
-val pluginInstrumentPluginCode: String by project
 val pluginVersion: String by project
 val pluginJavaVersion: String by project
+val pluginVerifyProductDescriptor: String by project
 
-val inCI = System.getenv("CI") != null
+version = if (pluginVersion == "auto") {
+    val versionDetails: Closure<VersionDetails> by extra
+    val lastTag = versionDetails().lastTag
+    if (lastTag.startsWith("v", ignoreCase = true)) {
+        lastTag.substring(1)
+    } else {
+        lastTag
+    }
+} else {
+    pluginVersion
+}
 
-val twelvemonkeysVersion = "3.8.2"
-val junitVersion = "5.8.2"
+if (pluginVerifyProductDescriptor.toBoolean()) {
+    val pluginXmlStr = projectDir.resolve("src/main/resources/META-INF/plugin.xml").readText()
+    if (!pluginXmlStr.contains("<product-descriptor")) {
+        throw GradleException("plugin.xml: Product Descriptor is missing")
+    }
+}
 
-logger.quiet("Will use IDEA $pluginIdeaVersion and Java $pluginJavaVersion")
+logger.quiet("Will use IDEA $pluginIdeaVersion and Java $pluginJavaVersion. Plugin version set to $version.")
 
 group = "lermitage.intellij.extra.icons"
-version = pluginVersion
 
 repositories {
     mavenCentral()
 }
 
+val failsafe = "3.2.4"
+val twelvemonkeysVersion = "3.8.3"
+val junitVersion = "5.9.0"
+
 dependencies {
+    implementation("dev.failsafe:failsafe:$failsafe") // Retry support https://failsafe.dev/retry/
     implementation("com.twelvemonkeys.imageio:imageio-core:$twelvemonkeysVersion") // https://github.com/haraldk/TwelveMonkeys/releases
     // TODO Apache Batik is bundled with IJ and IJ-based IDEs (tested with PyCharm Community). If needed, see how to
     //  integrate org.apache.xmlgraphics:batik-all:1.14 without failing to load org.apache.batik.anim.dom.SAXSVGDocumentFactory
@@ -44,14 +69,18 @@ dependencies {
 
     testImplementation("org.junit.jupiter:junit-jupiter-api:$junitVersion")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:$junitVersion")
+
+    // TODO check JUnit and Gradle updates and remove this workaround asap
+    // gradle 7.5 + JUnit workaround for NoClassDefFoundError: org/junit/platform/launcher/LauncherSessionListener
+    testRuntimeOnly("org.junit.platform:junit-platform-launcher:1.9.0")
 }
 
 intellij {
-    downloadSources.set(pluginDownloadIdeaSources.toBoolean() && !inCI)
-    instrumentCode.set(pluginInstrumentPluginCode.toBoolean())
+    downloadSources.set(pluginDownloadIdeaSources.toBoolean() && !System.getenv().containsKey("CI"))
+    instrumentCode.set(true)
     pluginName.set("Extra Icons")
     plugins.set(listOf("AngularJS"))
-    sandboxDir.set("${rootProject.projectDir}/.idea-sandbox/${shortIdeVersion(pluginIdeaVersion)}")
+    sandboxDir.set("${rootProject.projectDir}/.idea-sandbox/${shortenIdeVersion(pluginIdeaVersion)}")
     updateSinceUntilBuild.set(false)
     version.set(pluginIdeaVersion)
 }
@@ -66,9 +95,16 @@ tasks {
         sourceCompatibility = pluginJavaVersion
         targetCompatibility = pluginJavaVersion
         options.compilerArgs = listOf("-Xlint:deprecation")
+        options.encoding = "UTF-8"
     }
     withType<Test> {
         useJUnitPlatform()
+
+        // TODO check JUnit and Gradle updates and remove this workaround asap
+        // gradle 7.5 + JUnit workaround https://docs.gradle.org/7.5/userguide/upgrading_version_7.html#removes_implicit_add_opens_for_test_workers
+        jvmArgs("--add-opens=java.base/java.io=ALL-UNNAMED")
+        jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
+        jvmArgs("--add-opens=java.base/java.util=ALL-UNNAMED")
     }
     jacocoTestReport {
         reports {
@@ -95,7 +131,10 @@ tasks {
             }
         }
         outputFormatter = closureOf<Result> {
-            unresolved.dependencies.removeIf { it.group.toString() == "unzipped.com.jetbrains.plugins" }
+            unresolved.dependencies.removeIf {
+                val coordinates = "${it.group}:${it.name}"
+                coordinates.startsWith("unzipped.com") || coordinates.startsWith("com.jetbrains:ideaI")
+            }
             val plainTextReporter = PlainTextReporter(project, revision, gradleReleaseChannel)
             val writer = StringWriter()
             plainTextReporter.write(writer, this)
@@ -105,21 +144,26 @@ tasks {
     runIde {
         jvmArgs("-Xms128m")
         jvmArgs("-Xmx1024m")
-        jvmArgs("--add-exports", "java.base/jdk.internal.vm=ALL-UNNAMED")
-        // copy over some JVM args from IntelliJ
-        jvmArgs("-Dide.no.platform.update=true")
-        jvmArgs("-Djdk.attach.allowAttachSelf=true")
-        jvmArgs("-Djdk.module.illegalAccess.silent=true")
-        jvmArgs("-Dsun.io.useCanonCaches=false")
-        jvmArgs("-XX:+UseG1GC")
-        jvmArgs("-XX:CICompilerCount=2")
-        jvmArgs("-XX:ReservedCodeCacheSize=512m")
-        jvmArgs("-XX:SoftRefLRUPolicyMSPerMB=50")
-
-        autoReloadPlugins.set(true)
+        autoReloadPlugins.set(false)
+        // If any warning or error with missing --add-opens, wait for the next gradle-intellij-plugin's update that should sync
+        // with https://raw.githubusercontent.com/JetBrains/intellij-community/master/plugins/devkit/devkit-core/src/run/OpenedPackages.txt
+        // or do it manually
     }
     runPluginVerifier {
+        // https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#runpluginverifier-task
         ideVersions.set(properties("pluginVerifierIdeVersions").split(',').map(String::trim).filter(String::isNotEmpty))
+        failureLevel.set(
+            EnumSet.complementOf(
+                EnumSet.of(
+                    // TODO enable COMPATIBILITY_PROBLEMS when this issue is fixed: https://youtrack.jetbrains.com/issue/MP-4724/intellij-plugin-verifier-Plugin-AngularJS-doesnt-have-a-build-compatible-with-IC-222373954-in-Marketplace
+                    //RunPluginVerifierTask.FailureLevel.COMPATIBILITY_PROBLEMS,
+                    RunPluginVerifierTask.FailureLevel.OVERRIDE_ONLY_API_USAGES,
+                    RunPluginVerifierTask.FailureLevel.NON_EXTENDABLE_API_USAGES,
+                    RunPluginVerifierTask.FailureLevel.PLUGIN_STRUCTURE_WARNINGS,
+                    RunPluginVerifierTask.FailureLevel.INVALID_PLUGIN
+                )
+            )
+        )
     }
     buildSearchableOptions {
         enabled = false
@@ -153,6 +197,10 @@ configurations {
     }
 }
 
+doctor {
+    warnWhenNotUsingParallelGC.set(false)
+}
+
 fun isNonStable(version: String): Boolean {
     if (listOf("RELEASE", "FINAL", "GA").any { version.toUpperCase().endsWith(it) }) {
         return false
@@ -164,12 +212,15 @@ fun isNonStable(version: String): Boolean {
 
 /** Return an IDE version string without the optional PATCH number.
  * In other words, replace IDE-MAJOR-MINOR(-PATCH) by IDE-MAJOR-MINOR. */
-fun shortIdeVersion(version: String): String {
+fun shortenIdeVersion(version: String): String {
+    if (version.contains("SNAPSHOT", ignoreCase = true)) {
+        return version
+    }
     val matcher = Regex("[A-Za-z]+[\\-]?[0-9]+[\\.]{1}[0-9]+")
     return try {
         matcher.findAll(version).map { it.value }.toList()[0]
     } catch (e: Exception) {
-        logger.warn("Failed to shorten IDE version $version", e)
+        logger.warn("Failed to shorten IDE version $version: ${e.message}")
         version
     }
 }
